# ECMOproject

./: .gitignore  README.md
PicoOld/: SPItest.py  clean_supply2.csv  clean_supply2.xlsx  coefficients.py  config.py  logs.csv  main.py  main_1.py  temp_conv.py  test.csv  test.xlsx
PicoOld/RPi/: GPIO.py
PicoW/: 09_12_cal.csv  ADS1256.py  BLE_UUID_map.py  OOP.py  aioble_test.py  ble_constants.py  ble_peripheral.py  ble_simple_peripheral.py  bluetooth_handler.py  boot.py  cal.csv  clean_supply.csv  clean_supply.xlsx  clean_supply2 - Copy.csv  coefficients.py  communication.py  config.py  csv.py  datawriter.py  datetime_conversion.py  ds3231.py  logs1.csv  main.py  main_W.py  peripherals.py  printhandler.py  pyads1256.py  queue.py  recording.csv  sd_operatorandsmartwriterbitch.py  sdcard.py  store_psk.py  tasks.py  test.py  testwith Rinse.xlsx  urtc.py  wireless.py
PicoW_C/: CMakeLists.txt  README.md
PicoW_C/lib/ads1256/: ads1256.c  ads1256.h  implementation_notes.txt
PicoW_C/src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
PicoW_C/test/: CMakeLists.txt  test_ads1256.c  test_main.c
SensorInterface/: BLE.py  GUI_launcher.py  aioble_test_receive.py  bitch.py  bitch.ui  blablabl copy.py  blablabl.py  blablabl.py~  blablabla.txt  ble_central_handler.py  debug.py  first_my_own_gui.py  first_my_own_gui.ui  gui.py  gui.ui  gui1.py  main.py  main.pyw  mpllaunch_qt_designer.py  mplwidget.py  qtdesigner.py  qtdesigner.ui  receive.py  requirements.txt  scan_all.py  start.py  test.py  test.ui
Sim Model/20240827_no_heat_transfer/: output-08-27-2024-00-14-52.csv  parameters-08-27-2024-00-14-52.csv
Sim Model/20240827_perfect_heat_transfer/: output-08-27-2024-00-01-38.csv  parameters-08-27-2024-00-01-38.csv
Sim Model/default/: interpolated_picco_85-08-13-2024-20-37-51.csv  output-08-13-2024-20-37-51.csv  output-08-13-2024-21-08-49.csv  parameters-08-13-2024-20-37-51.csv
Sim Model/first eyeball param/: output-heater-injectate.csv  output-heater.csv  output-injectate.csv  parameters-08-13-2024-21-23-07.csv
